--- a/index.html
+++ b/index.html
@@ -96,6 +96,26 @@
       </tr>
     </table>
     <br>
+    <h2>Projects</h2>
+    <table cellspacing="10">
+      <tr>
+        <td><strong>Quarantine Centre Management System:</strong>
+
+        </td>
+        <td>Application built with Python and SQL using Tkinter for 
+          interface and Spyder for backend. It can be used to maintain database.</td>
+
+      </tr>
+      <tr>
+        <td>
+          <strong>Music Recommendation System:</strong>
+        </td>
+        <td>Analyzing million song datasets and implementing
+          various recommendation models using python in
+          Jupyter notebook</td>
+      </tr>
+    </table>
+    <hr>
     
 
     <a href="hobbies.html">My Hobbies</a>
