--- a/index.html
+++ b/index.html
@@ -2,6 +2,20 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <style>
+      body 
+      {
+        background-color: powderblue;
+      }
+      hr
+      {
+        border-color: grey;
+        border-style: none;
+        border-top-style: dotted;
+        border-width: 5px;
+        width: 10%;
+      }
+    </style>
     <title>🖤 Satyam's Website</title>
   </head>
   <body>
