--- a/index.html
+++ b/index.html
@@ -2,20 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <style>
-      body 
-      {
-        background-color: powderblue;
-      }
-      hr
-      {
-        border-color: grey;
-        border-style: none;
-        border-top-style: dotted;
-        border-width: 5px;
-        width: 10%;
-      }
-    </style>
+<link rel="stylesheet" href="CSS/styles.css">
     <title>🖤 Satyam's Website</title>
   </head>
   <body>
